<resources>
    <string name="app_name_upper">AMICER</string>
    <string name="nao_postamos">Não postamos nada no Facebook</string>
    <string name="ao_entrar">Ao entrar, você concorda com nossos</string>
    <string name="termos"><u>termos de serviço</u></string>
    <string name="politica_de_privacidade">e <u>politica de privacidade</u></string>
    <string name="cancel_login">Falha no login</string>
    <string name="error_login">Falha na conexão</string>
    <string name="firebase_error_login">Falha ao logar</string>
    <string name="facebook_app_id">1063390927169899</string>
    <string name="fb_login_protocol_scheme">fb1063390927169899</string>
    <string name="not_firebase_auth">Não foi possível autenticar com Firebase</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="title_activity_tab_perfil">TabPerfil</string>
    <string name="tab_text_1">PERFIL</string>
    <string name="tab_text_2">SUGESTÕES</string>
    <string name="tab_text_3">AMIGOS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab_home">TabHome</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="type_a_message">Digite uma mensagem…</string>
    <string name="app_logo_description">App Logo</string>
    <string name="profile">Perfil</string>
    <string name="about_me">Sobre mim</string>
    <string name="interest1">Interesse #1</string>
    <string name="interest2">Interesse #2</string>
    <string name="gallery">Galeria</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="slogan">Encontre pessoas incríveis e com os mesmos interesses que você!</string>
    <string name="logout">Sair</string>
</resources>
