<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/background1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_upper"
            android:textColor="@color/textColor2"
            android:textSize="40sp"
            app:fontFamily="@font/quattrocento"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="40dp"
            android:src="@mipmap/logo_grande"
            android:contentDescription="@string/app_logo_description"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/slogan"
            android:textAllCaps="false"
            android:textColor="@color/textColor2"
            android:textSize="25sp"
            android:textStyle="bold"
            app:fontFamily="@font/quattrocento"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            tools:targetApi="o" />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:gravity="bottom">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ao_entrar"
        android:textSize="12sp"
        app:fontFamily="@font/quattrocento"
        android:textColor="@color/textColor2"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/termos"
        android:textSize="12sp"
        app:fontFamily="@font/quattrocento"
        android:textColor="@color/textColor2"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/politica_de_privacidade"
        android:textSize="12sp"
        app:fontFamily="@font/quattrocento"
        android:textColor="@color/textColor2"
        android:textStyle="bold"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:elevation="12dp"
        tools:targetApi="lollipop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/nao_postamos"
        android:textSize="12sp"
        app:fontFamily="@font/quattrocento"
        android:textColor="@color/textColor2"
        android:textStyle="bold"/>
</LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        tools:targetApi="lollipop" />

</LinearLayout>