<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="vertical"
            tools:targetApi="o">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/quattrocento"
                android:gravity="center"
                android:text="@string/gallery"
                android:textColor="@color/textColor2"
                android:textSize="22sp"
                android:textStyle="bold" />+

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="5dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quattrocento"
                    android:text="@string/about_me"
                    android:textColor="@color/textColor2"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:autofillHints="no"
                        android:background="@color/white"
                        android:focusable="true"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLength="500"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/caracCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:fontFamily="@font/quattrocento"
                        android:text="500"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/quattrocento"
                    android:gravity="center"
                    android:text="@string/interest1"
                    android:textColor="@color/textColor2"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/categories1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:gravity="center" />
            </LinearLayout>

            <com.pchmn.materialchips.ChipsInput
                android:id="@+id/chipsInput1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:elevation="3dp"
                android:focusable="false"
                app:chip_backgroundColor="@color/colorPrimary"
                app:chip_deletable="true"
                app:chip_deleteIconColor="@color/black"
                app:chip_hasAvatarIcon="false"
                app:chip_labelColor="@color/black"
                app:hint="#" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/quattrocento"
                    android:gravity="center"
                    android:text="@string/interest2"
                    android:textColor="@color/textColor2"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/categories2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:gravity="center" />
            </LinearLayout>


            <com.pchmn.materialchips.ChipsInput
                android:id="@+id/chipsInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:elevation="3dp"
                android:focusable="false"
                app:chip_backgroundColor="@color/colorPrimary"
                app:chip_deletable="true"
                app:chip_deleteIconColor="@color/black"
                app:chip_hasAvatarIcon="false"
                app:chip_labelColor="@color/black"
                app:hint="#" />

            <Button
                android:id="@+id/btLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="25dp"
                android:background="@color/colorPrimary"
                android:elevation="12dp"
                android:fontFamily="@font/quattrocento"
                android:onClick="logout"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:targetApi="lollipop" />
        </LinearLayout>
</LinearLayout>